issue21 profile left align

--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ input[type="submit"]:hover {
     width: 50%;
     margin-left: 25%;    
     margin-right: 25%; 
-    text-align: center;   
+    text-align: left;   
 }
 .info td{
     height:50px;
